--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.2",
+    "@popperjs/core": "^2.11.8",
     "@types/mdx": "^2.0.10",
+    "bootstrap": "^5.3.2",
+    "jquery": "^3.7.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
