--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
     "@next/mdx": "^14.0.2",
@@ -16,6 +21,7 @@
     "@types/mdx": "^2.0.10",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
+    "mdb-react-ui-kit": "^7.0.0",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
