--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdx-js/loader": "^3.0.0",
     "@mdx-js/react": "^3.0.0",
-    "@next/mdx": "^14.0.2",
+    "@next/mdx": "^14.0.3",
     "@popperjs/core": "^2.11.8",
     "@types/mdx": "^2.0.10",
     "bootstrap": "^5.3.2",
     "jquery": "^3.7.1",
     "mdb-react-ui-kit": "^7.0.0",
-    "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.9.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.2",
+    "eslint": "^8.54.0",
+    "eslint-config-next": "^14.0.2",
+    "next": "^14.0.3",
     "typescript": "^5"
   }
 }
